Correction version mobile

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2324,7 +2324,7 @@ pre code {
     }
 
     .col-sm-12 {
-        width: 100%
+        width: 95%
     }
 
     .col-sm-11 {
